# RAG-System-a-2-step-rag

./: .gitignore  Configuration.py  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
